1st version deployed

--- a/Andon.Biz.Service/App.config
+++ b/Andon.Biz.Service/App.config
@@ -8,13 +8,13 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
 	<connectionStrings>
-		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQL2022;initial catalog=iAndon.DST;persist security info=True;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=FTSHRM_AVANI;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<appSettings>
 		<!-- Service -->
 		<!--0: Error, 1: Warning, 2: Info, 3: Debug-->
 		<add key="log_level" value="3" />
-		<add key="log_path" value="D:\iAndon\Biz" />
+		<add key="log_path" value="D:\iAndon\Biz\Art" />
 		<!--Thời gian check Subscribe RabbitMQ - In seconds-->
 		<add key="queue_interval" value="1" />
 		<!--Thời gian xử lý message - In seconds-->
