--- a/Andon.Biz.Service/App.config
+++ b/Andon.Biz.Service/App.config
@@ -55,6 +55,8 @@
 
 		<!--Fix thời gian lệch giữa PLC và Server - 00:04:40 = 280 seconds -->
 		<add key="fix_time_difference" value="278" />
+		<!--Fix thời gian hoàn thành sản phẩm gần nhất cần tính - In seconds -->
+		<add key="fix_time_for_production" value="300" />
 
 
 		<add key="show_all_in_time" value="0" />
