--- a/Andon.Biz.Test/App.config
+++ b/Andon.Biz.Test/App.config
@@ -8,7 +8,8 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
 	<connectionStrings>
-		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=FTSHRM_AVANI;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=FTSHRM_AVANI;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=HRM_AVANI;persist security info=True;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<appSettings>
 		<!-- Service -->
@@ -56,10 +57,13 @@
 		<!--Fix thời gian lệch giữa PLC và Server - 00:04:40 = 280 seconds -->
 		<add key="fix_time_difference" value="278" />
 
+		<!--Fix thời gian hoàn thành sản phẩm gần nhất cần tính - In seconds -->
+		<add key="fix_time_for_production" value="300" />
+
 
 		<add key="show_all_in_time" value="0" />
 		<!--Tính theo công suất hay không-->
-		<add key="calculate_by_performance" value="1" />
+		<add key="calculate_by_performance" value="0" />
 		<!--Tự động SPLIT kế hoạch theo TIME hay không -->
 		<add key="auto_split_workplan_detail" value="0" />
 		<!--Có sử dụng CONFIG cho PRODUCT hay dùng trực tiếp từ PRODUCT -->
