--- a/Andon.Biz.Helper/Andon.Ariston.Biz.Helper.csproj
+++ b/Andon.Biz.Helper/Andon.Ariston.Biz.Helper.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6A3D41B5-B3C3-4C1E-800A-935874CFFA5E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Andon.DST.Biz.Helper</RootNamespace>
-    <AssemblyName>Andon.DST.Biz.Helper</AssemblyName>
+    <RootNamespace>Avani.Helper</RootNamespace>
+    <AssemblyName>Avani.Helper</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
