--- a/Andon.Biz.Service/Andon.Ariston.Biz.Service.csproj
+++ b/Andon.Biz.Service/Andon.Ariston.Biz.Service.csproj
@@ -53,7 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Avani.Helper">
-      <HintPath>..\Andon.Yokowo.Biz.Logic\libs\Avani.Helper.dll</HintPath>
+      <HintPath>..\Andon.Biz.Logic\libs\Avani.Helper.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
