--- a/Andon.Biz.Service/App.config
+++ b/Andon.Biz.Service/App.config
@@ -55,8 +55,10 @@
 
 		<!--Fix thời gian lệch giữa PLC và Server - 00:04:40 = 280 seconds -->
 		<add key="fix_time_difference" value="278" />
-		<!--Fix thời gian hoàn thành sản phẩm gần nhất cần tính - In seconds -->
-		<add key="fix_time_for_production" value="300" />
+		<!--Fix thời gian hoàn thành sản phẩm gần nhất cần tính, nhỏ hơn thì bỏ qua - In seconds -->
+		<add key="fix_time_for_production" value="360" />
+		<!--Fix thời gian hoàn thành sản phẩm gần nhất đến giờ thì sẽ kết thúc - In seconds -->
+		<add key="fix_time_for_stop" value="300" />
 
 
 		<add key="show_all_in_time" value="0" />
