--- a/Andon.Biz.Test/App.config
+++ b/Andon.Biz.Test/App.config
@@ -8,8 +8,9 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
 	<connectionStrings>
-		<!--<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=FTSHRM_AVANI;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=HRM_AVANI;persist security info=True;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=AVANI_ARISTON;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.19.70.106,7000;initial catalog=HRM_AVANI;persist security info=True;user id=sa;password=Art@Andon@2024;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<!--<add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=HRM_AVANI;persist security info=True;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 	</connectionStrings>
 	<appSettings>
 		<!-- Service -->
@@ -17,15 +18,15 @@
 		<add key="log_level" value="3" />
 		<add key="log_path" value="D:\iAndon\Biz\Art" />
 		<!--Thời gian check Subscribe RabbitMQ - In seconds-->
-		<add key="queue_interval" value="1" />
+		<add key="queue_interval" value="2" />
 		<!--Thời gian xử lý message - In seconds-->
-		<add key="message_interval" value="1" />
+		<add key="message_interval" value="2" />
 		<!--Thời gian lưu dữ liệu vào DB - In seconds-->
-		<add key="data_interval" value="1" />
+		<add key="data_interval" value="2" />
 		<!--Thời gian tải lại dữ liệu từ DB - In seconds-->
-		<add key="reload_interval" value="1" />
+		<add key="reload_interval" value="2" />
 		<!--Thời gian xử lý chạy chuyền/tính toán - In seconds-->
-		<add key="process_interval" value="1" />
+		<add key="process_interval" value="2" />
 		<!--Websocket Interval - In seconds-->
 		<add key="websocket_interval" value="3" />
 		<!--Websocket Batch-->
@@ -58,7 +59,7 @@
 		<add key="fix_time_difference" value="278" />
 
 		<!--Fix thời gian hoàn thành sản phẩm gần nhất cần tính, nhỏ hơn thì bỏ qua - In seconds -->
-		<add key="fix_time_for_production" value="360" />
+		<add key="fix_time_for_production" value="3600" />
 		<!--Fix thời gian hoàn thành sản phẩm gần nhất đến giờ thì sẽ kết thúc - In seconds -->
 		<add key="fix_time_for_stop" value="300" />
 
