--- a/Andon.Biz.Logic/app.config
+++ b/Andon.Biz.Logic/app.config
@@ -13,7 +13,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=HRM_AVANI;user id=sa;password=admin@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Data.csdl|res://*/Data.ssdl|res://*/Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=27.72.56.75,7023;initial catalog=AVANI_ARISTON;persist security info=True;user id=fts_avani;password=FTSvn@AVANI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
